--- a/app/views/layouts/_post.html.erb
+++ b/app/views/layouts/_post.html.erb
@@ -1,18 +1,21 @@
 <div class="ui segment">
+		<a class="ui right aligned blue header" href="#">
+			<%= User.find(currentPost.user_id).username %>
+		</a>
+	
 	<% if currentPost.post_type == 1 %>
-		<a class="ui right aligned blue header" href="#"> Username </a>
 		<hr>
 		<div class="ui centered">
 		<img class="ui centered big image" src="https://external-preview.redd.it/zBKGV2IC4afqCyMFak5K36ZhMv8DB0HGF1BAIl39PSw.jpg?width=960&crop=smart&auto=webp&s=d4641078e3ef4bf20b7ea7e1c2b3845fddb37473" >
 		<p></p>
 		</div>
-    <% end %>
+
 
 	<h4 class="ui horizontal divider header">
 	  Description
 	</h4>
-
-
+    <% end %>
+    <p>
 	<div class="ui container" >
 		<div class="ui huge header">
 		<%= currentPost.title %>
