Set up rails graph dependency like a sensible person.

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -9,6 +9,8 @@
 	<p style="big header">Description:</p>
 	<%= text_area_tag(:description) %>
 	<p>
+	<p style="big header">Tags (use ',' to seperate):</p>
+	<%= text_field_tag(:tags) %>
     <br>
 	<%= submit_tag("Submit",class:"ui submit button")%>
 
