--- a/app/views/layouts/_topmenu.html.erb
+++ b/app/views/layouts/_topmenu.html.erb
@@ -19,7 +19,7 @@
 
 	<% else %>
 
-	<%= link_to '<div class="item link"> Logout '.html_safe, login_path, method: :delete, data:{confirm:"Are You Sure?"} %></div>
+	<%= link_to '<div class="item link"> Logout '.html_safe, login_path, method: :delete, data:{confirm:"Are You Sure You Want To Logout?"} %></div>
 
 	<% end %>
 </div>
