--- a/app/views/posts/profile.html.erb
+++ b/app/views/posts/profile.html.erb
@@ -1,4 +1,5 @@
 <!-- Home Post Menu -->
-<h1 class="ui inverted header">Explore</h1>
+<h1 class="ui inverted header">
+<%= @username %>'s Profile</h1>
 
 <%= render 'layouts/viewposts', posts: @posts %>
